Changing logo file reference to a relative path in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ classes: wide
      ================================================================ -->
 <div class="hero-banner">
   <div class="hero-content">
-    <img src="/assets/images/zipper-logo-light.svg" alt="Zipper" class="hero-logo">
+    <img src="{{ '/assets/images/zipper-logo-light.svg' | relative_url }}" alt="Zipper" class="hero-logo">
     <h1>Reid's Unzipped</h1>
     <p class="hero-tagline">Reid family · Sailing catamaran Zipper · Around the world</p>
     <div class="hero-buttons">
