Formatting the voyage page holding the blogs

--- a/_pages/voyage-log.html
+++ b/_pages/voyage-log.html
@@ -1,16 +1,4 @@
 ---
-title: "Voyage Log"
-layout: home
+layout: voyage-log
 permalink: /voyage-log/
-author_profile: false
-classes: wide
 ---
-
-<div class="section-heading" style="margin-top: 1.5rem;">
-  <h2>Voyage Log</h2>
-</div>
-
-<p style="text-align:center; color:#5a7a96; max-width:600px; margin: 0 auto 2rem; font-size:0.95rem;">
-  Chronicles from 15,577 nautical miles and counting — passages, anchorages, 
-  adventures ashore, and everything in between.
-</p>
