--- a/index.html
+++ b/index.html
@@ -467,10 +467,11 @@ layout: none
       <line x1="294" y1="39.8" x2="328" y2="39.8" stroke="#b8d4e8" stroke-width="2.5" stroke-linecap="round"/>
     </svg>
     <h1>Reid's Unzipped</h1>
-    <p class="hero-tagline">Reid family · Sailing catamaran Zipper · Around the world</p>
+    <p class="hero-tagline">Reid family · Sailing catamaran Zipper · Across the oceans · Under the stars</p>
     <div class="hero-buttons">
       <a href="{{ '/voyage-log/' | relative_url }}" class="btn-primary">Voyage Log</a>
       <a href="{{ '/crew/' | relative_url }}" class="btn-outline">Meet the Crew</a>
+      <a href="{{ '/the-boat/' | relative_url }}" class="btn-outline">Zipper</a>
     </div>
   </div>
 </div>
@@ -508,7 +509,9 @@ layout: none
   <div class="stat-row">
     <div class="stat"><span class="number">15,577</span><span class="label">Nautical miles</span></div>
     <div class="stat"><span class="number">4</span><span class="label">Crew aboard</span></div>
-    <div class="stat"><span class="number">1</span><span class="label">Lucky catamaran</span></div>
+    <div class="stat"><span class="number">13</span><span class="label">Countries</span></div>
+    <div class="stat"><span class="number">4</span><span class="label">Permanent crew</span></div>
+#    <div class="stat"><span class="number">1</span><span class="label">Lucky catamaran</span></div>
     <div class="stat"><span class="number">∞</span><span class="label">Adventures</span></div>
   </div>
 </div>
