Updating Claude-generated text across website to personalise

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ layout: none
       <line x1="294" y1="39.8" x2="328" y2="39.8" stroke="#b8d4e8" stroke-width="2.5" stroke-linecap="round"/>
     </svg>
     <h1>Reid's Unzipped</h1>
-    <p class="hero-tagline">Reid family · Sailing catamaran Zipper · Across the oceans · Under the stars</p>
+    <p class="hero-tagline">Reid family sailing Zipper · Across the oceans · Under the stars</p>
     <div class="hero-buttons">
       <a href="{{ '/voyage-log/' | relative_url }}" class="btn-primary">Voyage Log</a>
       <a href="{{ '/crew/' | relative_url }}" class="btn-outline">Meet the Crew</a>
@@ -505,14 +505,13 @@ layout: none
      ABOUT / STATS STRIP
      ===================================================================== -->
 <div class="about-strip">
-  <p>The Reids put work, school and day-to-day life on pause to sail their catamaran Zipper across the world's oceans. This is where they share what they find.</p>
+  <p>The Reids have put work, school and day-to-day life on pause for the adventure of a lifetime, exploring some of the world's most beautiful and remote lands and seas on our catamaran, Zipper. 
+  This is where we try to share some of what we find.</p>
   <div class="stat-row">
     <div class="stat"><span class="number">15,577</span><span class="label">Nautical miles</span></div>
-    <div class="stat"><span class="number">4</span><span class="label">Crew aboard</span></div>
     <div class="stat"><span class="number">13</span><span class="label">Countries</span></div>
-    <div class="stat"><span class="number">4</span><span class="label">Permanent crew</span></div>
-#    <div class="stat"><span class="number">1</span><span class="label">Lucky catamaran</span></div>
-    <div class="stat"><span class="number">∞</span><span class="label">Adventures</span></div>
+    <div class="stat"><span class="number">5</span><span class="label">Continents</span></div>
+    <div class="stat"><span class="number">∞</span><span class="label">Memories</span></div>
   </div>
 </div>
 
