Updating homepage crew images

--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@ layout: none
     <h1>Reid's Unzipped</h1>
     <p class="hero-tagline">Reid family sailing Zipper · Across the oceans · Under the stars</p>
     <div class="hero-buttons">
-      <a href="{{ '/voyage-log/' | relative_url }}" class="btn-primary">Voyage Log</a>
+      <a href="{{ '/voyage-log/' | relative_url }}" class="btn-outline">Voyage Log</a>
       <a href="{{ '/crew/' | relative_url }}" class="btn-outline">Meet the Crew</a>
-      <a href="{{ '/the-boat/' | relative_url }}" class="btn-outline">Zipper</a>
+      <a href="{{ '/the-boat/' | relative_url }}" class="btn-outline">See the boat</a>
     </div>
   </div>
 </div>
@@ -521,28 +521,28 @@ layout: none
 <div class="container">
   <div class="section-heading"><h2>The Crew</h2></div>
   <div class="crew-grid">
-    <a href="{{ '/crew/angus/' | relative_url }}" class="crew-card">
+    <a href="{{ '/assets/images/crew/angus-cabin.webp/' | relative_url }}" class="crew-card">
       <div class="crew-photo-placeholder">🧑‍✈️</div>
       <div class="crew-info">
         <span class="crew-name">Angus</span>
         <span class="crew-role">Captain</span>
       </div>
     </a>
-    <a href="{{ '/crew/sophie/' | relative_url }}" class="crew-card">
+    <a href="{{ '/assets/images/crew/sophie.jpg/' | relative_url }}" class="crew-card">
       <div class="crew-photo-placeholder">👩‍🍳</div>
       <div class="crew-info">
         <span class="crew-name">Sophie</span>
         <span class="crew-role">Ship's Cook</span>
       </div>
     </a>
-    <a href="{{ '/crew/isla/' | relative_url }}" class="crew-card">
+    <a href="{{ '/assets/images/crew/isla.webp/' | relative_url }}" class="crew-card">
       <div class="crew-photo-placeholder">⚓</div>
       <div class="crew-info">
         <span class="crew-name">Isla</span>
         <span class="crew-role">First Mate</span>
       </div>
     </a>
-    <a href="{{ '/crew/jamie/' | relative_url }}" class="crew-card">
+    <a href="{{ '/assets/images/crew/jamie.jpg/' | relative_url }}" class="crew-card">
       <div class="crew-photo-placeholder">🐾</div>
       <div class="crew-info">
         <span class="crew-name">Jamie</span>
@@ -565,7 +565,7 @@ layout: none
     &nbsp;·&nbsp;
     <a href="{{ '/supporters/' | relative_url }}">Supporters</a>
   </div>
-  © Reid's Unzipped — Reid family cruising the world on Zipper
+  © Reid's Unzipped — Reid family cruising the oceans on Zipper
 </footer>
 
 <script>
