Correct homepage card for Angus

--- a/index.html
+++ b/index.html
@@ -518,31 +518,38 @@ layout: none
 <!-- =====================================================================
      CREW
      ===================================================================== -->
+
 <div class="container">
   <div class="section-heading"><h2>The Crew</h2></div>
-  <div class="crew-grid">
-    <a href="{{ '/assets/images/crew/angus-cabin.webp/' | relative_url }}" class="crew-card">
-      <div class="crew-photo-placeholder">🧑‍✈️</div>
+  <div class="crew-grid">    
+    <a href="{{ '/crew/angus/' | relative_url }}" class="crew-card">      
+      <div class="crew-photo-container">
+        <img src="{{ '/assets/images/crew/angus-cabin.webp' | relative_url }}" 
+             alt="Captain Angus" 
+             class="crew-photo">
+      </div>
       <div class="crew-info">
         <span class="crew-name">Angus</span>
         <span class="crew-role">Captain</span>
       </div>
     </a>
-    <a href="{{ '/assets/images/crew/sophie.jpg/' | relative_url }}" class="crew-card">
+
+
+    <a href="{{ '/assets/images/crew/sophie.jpg' | relative_url }}" class="crew-card">
       <div class="crew-photo-placeholder">👩‍🍳</div>
       <div class="crew-info">
         <span class="crew-name">Sophie</span>
         <span class="crew-role">Ship's Cook</span>
       </div>
     </a>
-    <a href="{{ '/assets/images/crew/isla.webp/' | relative_url }}" class="crew-card">
+    <a href="{{ '/assets/images/crew/isla.webp' | relative_url }}" class="crew-card">
       <div class="crew-photo-placeholder">⚓</div>
       <div class="crew-info">
         <span class="crew-name">Isla</span>
         <span class="crew-role">First Mate</span>
       </div>
     </a>
-    <a href="{{ '/assets/images/crew/jamie.jpg/' | relative_url }}" class="crew-card">
+    <a href="{{ '/assets/images/crew/jamie.jpg' | relative_url }}" class="crew-card">
       <div class="crew-photo-placeholder">🐾</div>
       <div class="crew-info">
         <span class="crew-name">Jamie</span>
