Updating crew cards on homepage

--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@ layout: none
   <div class="crew-grid">    
     <a href="{{ '/crew/angus/' | relative_url }}" class="crew-card">      
       <div class="crew-photo-container">
-        <img src="{{ '/assets/images/crew/angus-cabin.webp' | relative_url }}" 
-             alt="Captain Angus" 
+        <img src="{{ '/assets/images/crew/JR1_3703.webp' | relative_url }}" 
+             alt="Angus" 
              class="crew-photo">
       </div>
       <div class="crew-info">
@@ -534,23 +534,36 @@ layout: none
       </div>
     </a>
 
-
-    <a href="{{ '/assets/images/crew/sophie.jpg' | relative_url }}" class="crew-card">
-      <div class="crew-photo-placeholder">👩‍🍳</div>
+    <a href="{{ '/crew/sophie/' | relative_url }}" class="crew-card">
+      <div class="crew-photo-container">
+        <img src="{{ '/assets/images/crew/JR1_3706.webp' | relative_url }}" 
+             alt="Sophie" 
+             class="crew-photo">
+      </div>
       <div class="crew-info">
         <span class="crew-name">Sophie</span>
         <span class="crew-role">Ship's Cook</span>
       </div>
     </a>
-    <a href="{{ '/assets/images/crew/isla.webp' | relative_url }}" class="crew-card">
-      <div class="crew-photo-placeholder">⚓</div>
+
+    <a href="{{ '/crew/isla/' | relative_url }}" class="crew-card">
+      <div class="crew-photo-container">
+        <img src="{{ '/assets/images/crew/isla.webp' | relative_url }}" 
+             alt="Isla" 
+             class="crew-photo">
+      </div>
       <div class="crew-info">
         <span class="crew-name">Isla</span>
         <span class="crew-role">First Mate</span>
       </div>
     </a>
-    <a href="{{ '/assets/images/crew/jamie.jpg' | relative_url }}" class="crew-card">
-      <div class="crew-photo-placeholder">🐾</div>
+
+    <a href="{{ '/crew/jamie/' | relative_url }}" class="crew-card">
+      <div class="crew-photo-container">
+        <img src="{{ '/assets/images/crew/IMG9016.webp' | relative_url }}" 
+             alt="Jamie" 
+             class="crew-photo">
+      </div>
       <div class="crew-info">
         <span class="crew-name">Jamie</span>
         <span class="crew-role">Cabin Boy</span>
